Implement shadcn/ui Components in Authentication System
 Added Professional UI Components:
- Installed shadcn/ui with Button, Input, Card, Form, Label, Alert, Dialog, Sheet
- Updated LoginScreen with Card-based layout and proper form components
- Enhanced DashboardInterface with Card components for stats and actions
- Improved HelperModeInterface with consistent Card and Button styling

 Component Updates:
- LoginScreen: Card layout with proper form validation styling
- DashboardInterface: Card-based dashboard with shadcn/ui components
- HelperModeInterface: Consistent Card layout for POS interface
- All buttons now use shadcn/ui Button component with proper variants

 UI Improvements:
- Professional, consistent design system
- Better accessibility with proper form components
- Improved visual hierarchy with Card components
- Enhanced user experience with proper button states and variants
- Consistent spacing and typography throughout

 All authentication flows now use shadcn/ui for professional appearance

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -60,7 +60,17 @@
     "logout": "Logout",
     "logoutConfirm": "Are you sure you want to logout?",
     "sessionExpired": "Your session has expired. Please login again.",
-    "accessDenied": "Access denied. You don't have permission to access this resource."
+    "accessDenied": "Access denied. You don't have permission to access this resource.",
+    "quickSwitch": "Quick Switch:",
+    "helperMode": "Helper Mode",
+    "roleRequired": "This feature requires specific role access.",
+    "permissionRequired": "This feature requires specific permissions.",
+    "currentRole": "Your current role:",
+    "helperInstructions": "Helper Mode Instructions",
+    "helperInstruction1": "Scan product barcodes to add items",
+    "helperInstruction2": "Process cash payments only", 
+    "helperInstruction3": "Call supervisor for discounts or returns",
+    "helperInstruction4": "Use F12 for quick cash sale"
   },
   "pos": {
     "pointOfSale": "Point of Sale",
