--- a/src/i18n/locales/si.json
+++ b/src/i18n/locales/si.json
@@ -60,7 +60,17 @@
     "logout": "ඉවත් වන්න",
     "logoutConfirm": "ඔබට ඇත්තටම ඉවත් වීමට අවශ්‍යද?",
     "sessionExpired": "ඔබගේ සැසිය කල් ඉකුත් වී ඇත. කරුණාකර නැවත පිවිසෙන්න.",
-    "accessDenied": "ප්‍රවේශය ප්‍රතික්ෂේප විය. ඔබට මෙම සම්පතට ප්‍රවේශ වීමට අවසර නැත."
+    "accessDenied": "ප්‍රවේශය ප්‍රතික්ෂේප විය. ඔබට මෙම සම්පතට ප්‍රවේශ වීමට අවසර නැත.",
+    "quickSwitch": "ඉක්මන් මාරුව:",
+    "helperMode": "සහායක ප්‍රකාරය",
+    "roleRequired": "මෙම විශේෂාංගයට විශේෂිත භූමිකා ප්‍රවේශය අවශ්‍යයි.",
+    "permissionRequired": "මෙම විශේෂාංගයට විශේෂිත අවසර අවශ්‍යයි.",
+    "currentRole": "ඔබගේ වර්තමාන භූමිකාව:",
+    "helperInstructions": "සහායක ප්‍රකාර උපදෙස්",
+    "helperInstruction1": "අයිතම එකතු කිරීමට නිෂ්පාදන බාර්කෝඩ් ස්කෑන් කරන්න",
+    "helperInstruction2": "මුදල් ගෙවීම් පමණක් සකසන්න",
+    "helperInstruction3": "වට්ටම් හෝ ආපසු ගැනීම් සඳහා අධීක්ෂකයා අමතන්න",
+    "helperInstruction4": "ඉක්මන් මුදල් විකුණුම සඳහා F12 භාවිතා කරන්න"
   },
   "pos": {
     "pointOfSale": "විකුණුම් ස්ථානය",
@@ -83,7 +93,10 @@
     "saleComplete": "විකුණුම සම්පූර්ණයි",
     "paymentMethod": "ගෙවීමේ ක්‍රමය",
     "amountReceived": "ලැබුණු මුදල",
-    "changeAmount": "ඉතිරි මුදල"
+    "changeAmount": "ඉතිරි මුදල",
+    "emptyCart": "කරත්තය හිස්",
+    "addItemsFirst": "මුලින්ම අයිතම එකතු කරන්න",
+    "scanBarcodeHint": "බාර්කෝඩ් ස්කෑන් කරන්න හෝ නිෂ්පාදනය සොයන්න"
   },
   "products": {
     "product": "නිෂ්පාදනය",
