--- a/src/i18n/locales/ta.json
+++ b/src/i18n/locales/ta.json
@@ -60,7 +60,17 @@
     "logout": "வெளியேறு",
     "logoutConfirm": "நீங்கள் உண்மையில் வெளியேற விரும்புகிறீர்களா?",
     "sessionExpired": "உங்கள் அமர்வு காலாவதியாகிவிட்டது. தயவுசெய்து மீண்டும் உள்நுழைக.",
-    "accessDenied": "அணுகல் மறுக்கப்பட்டது. இந்த வளத்தை அணுக உங்களுக்கு அனுமதி இல்லை."
+    "accessDenied": "அணுகல் மறுக்கப்பட்டது. இந்த வளத்தை அணுக உங்களுக்கு அனுமதி இல்லை.",
+    "quickSwitch": "விரைவு மாற்றம்:",
+    "helperMode": "உதவியாளர் பயன்முறை",
+    "roleRequired": "இந்த அம்சத்திற்கு குறிப்பிட்ட பங்கு அணுகல் தேவை.",
+    "permissionRequired": "இந்த அம்சத்திற்கு குறிப்பிட்ட அனுமதிகள் தேவை.",
+    "currentRole": "உங்கள் தற்போதைய பங்கு:",
+    "helperInstructions": "உதவியாளர் பயன்முறை வழிமுறைகள்",
+    "helperInstruction1": "பொருட்களை சேர்க்க தயாரிப்பு பார்கோடுகளை ஸ்கேன் செய்யவும்",
+    "helperInstruction2": "பணம் செலுத்துதல் மட்டுமே செயல்படுத்தவும்",
+    "helperInstruction3": "தள்ளுபடி அல்லது திரும்பப் பெறுவதற்கு மேற்பார்வையாளரை அழைக்கவும்",
+    "helperInstruction4": "விரைவு பண விற்பனைக்கு F12 ஐ பயன்படுத்தவும்"
   },
   "pos": {
     "pointOfSale": "விற்பனை புள்ளி",
@@ -83,7 +93,10 @@
     "saleComplete": "விற்பனை முடிந்தது",
     "paymentMethod": "பணம் செலுத்தும் முறை",
     "amountReceived": "பெறப்பட்ட தொகை",
-    "changeAmount": "மாற்றுப் பணம்"
+    "changeAmount": "மாற்றுப் பணம்",
+    "emptyCart": "வண்டி காலியாக உள்ளது",
+    "addItemsFirst": "முதலில் பொருட்களை சேர்க்கவும்",
+    "scanBarcodeHint": "பார்கோடு ஸ்கேன் செய்யவும் அல்லது தயாரிப்பு தேடவும்"
   },
   "products": {
     "product": "தயாரிப்பு",
