Complete shadcn/ui to Ant Design migration
- Migrate HelperModeInterface to Ant Design components
- Remove all old shadcn/ui components that were causing import errors
- Add missing translation keys for POS and helper mode functionality
- Fix class-variance-authority import errors by removing unused components
- Clean up component structure and ensure all imports work correctly

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,7 +24,13 @@
     "pin": "PIN",
     "loginButton": "Sign In",
     "loginError": "Invalid credentials",
-    "quickSwitch": "Quick Switch"
+    "quickSwitch": "Quick Switch",
+    "helperMode": "Helper Mode",
+    "helperInstructions": "Helper Mode Instructions",
+    "helperInstruction1": "Scan product barcodes to add items",
+    "helperInstruction2": "Process cash payments only",
+    "helperInstruction3": "Call supervisor for discounts or returns",
+    "helperInstruction4": "Use F12 for quick cash sale"
   },
   "dashboard": {
     "welcome": "Welcome",
@@ -40,7 +46,17 @@
   "pos": {
     "newSale": "New Sale",
     "startNewSale": "Start a new sale transaction",
-    "startSale": "Start Sale"
+    "startSale": "Start Sale",
+    "pointOfSale": "Point of Sale",
+    "productSearch": "Product Search",
+    "cart": "Shopping Cart",
+    "payment": "Payment",
+    "cash": "Cash",
+    "card": "Card",
+    "scanBarcode": "Scan barcode",
+    "scanBarcodeHint": "Scan barcode or search product",
+    "emptyCart": "Cart is empty",
+    "addItemsFirst": "Add items to cart first"
   },
   "products": {
     "manageProducts": "Manage product inventory"
@@ -100,7 +116,8 @@
     "no": "No",
     "primary": "Primary Button",
     "default": "Default Button",
-    "dashed": "Dashed Button"
+    "dashed": "Dashed Button",
+    "total": "Total"
   },
   "errors": {
     "networkError": "Network connection error"
