Implement Network Selection Dialog (Task 5.5)
- Create comprehensive network configuration types and utilities
- Build NetworkSelectionDialog with 4-step wizard interface
- Add NetworkContext for managing network state across the app
- Implement Main Computer vs Client Computer selection
- Add network path validation and connection testing
- Create setup steps and troubleshooting guidance
- Add offline mode fallback option
- Integrate first-run network setup into MainApplication
- Add comprehensive translation keys for network setup
- Include connection status monitoring and diagnostics

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -101,6 +101,44 @@
     "profile": "Profile",
     "theme": "Theme Settings"
   },
+  "network": {
+    "networkSetup": "Network Setup",
+    "selectTerminalType": "Select Terminal Type",
+    "mainComputer": "Main Computer",
+    "clientComputer": "Client Computer",
+    "mainComputerDesc": "This computer will host the database and serve other terminals",
+    "clientComputerDesc": "This computer will connect to the main computer for data access",
+    "mainFeature1": "Hosts the main database",
+    "mainFeature2": "Manages file sharing",
+    "mainFeature3": "Controls system settings",
+    "mainFeature4": "Generates reports",
+    "clientFeature1": "Connects to main database",
+    "clientFeature2": "Syncs data automatically",
+    "clientFeature3": "Works offline when needed",
+    "clientFeature4": "Handles sales transactions",
+    "skipToOffline": "Skip and use offline mode",
+    "configureMainComputer": "Configure Main Computer",
+    "configureClientComputer": "Configure Client Computer",
+    "terminalName": "Terminal Name",
+    "terminalNamePlaceholder": "Enter a name for this terminal",
+    "mainComputerPath": "Main Computer Path",
+    "pathFormatHelp": "Format: \\\\COMPUTER-NAME\\FOLDER-NAME",
+    "testConnection": "Test Connection",
+    "mainComputerSetup": "Main Computer Setup",
+    "connectingTo": "Connecting to",
+    "main": "Main",
+    "client": "Client",
+    "retry": "Retry",
+    "setupComplete": "Network Setup Complete!",
+    "mainSetupSuccess": "Your main computer has been configured successfully. Other terminals can now connect to this computer.",
+    "clientSetupSuccess": "Your client computer has been connected successfully. You can now use the POS system.",
+    "terminalType": "Terminal Type",
+    "connectedTo": "Connected To",
+    "startUsingPOS": "Start Using POS System",
+    "selectType": "Select Type",
+    "configure": "Configure",
+    "complete": "Complete"
+  },
   "common": {
     "save": "Save",
     "cancel": "Cancel",
@@ -117,7 +155,9 @@
     "primary": "Primary Button",
     "default": "Default Button",
     "dashed": "Dashed Button",
-    "total": "Total"
+    "total": "Total",
+    "continue": "Continue",
+    "back": "Back"
   },
   "errors": {
     "networkError": "Network connection error"
