Authentication System Fixed!

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -99,7 +99,50 @@
   },
   "user": {
     "profile": "Profile",
-    "theme": "Theme Settings"
+    "theme": "Theme Settings",
+    "shortcuts": "Keyboard Shortcuts"
+  },
+  "shortcuts": {
+    "title": "Keyboard Shortcuts",
+    "global": "Global Shortcuts",
+    "sale": "Sale Operations",
+    "navigation": "Navigation",
+    "system": "System",
+    "quickSale": "Quick Sale",
+    "customerMode": "Customer Mode",
+    "settings": "Settings",
+    "help": "Help",
+    "quickSaleDesc": "Quick Cash Sale",
+    "customerModeDesc": "Customer Mode",
+    "productSearchDesc": "Product Search",
+    "settingsDesc": "Settings",
+    "helpDesc": "Help",
+    "holdSaleDesc": "Hold Current Sale",
+    "retrieveSaleDesc": "Retrieve Held Sale",
+    "completeSaleDesc": "Complete Sale",
+    "cancelSaleDesc": "Cancel Sale",
+    "dashboardDesc": "Dashboard",
+    "productsDesc": "Products",
+    "customersDesc": "Customers",
+    "reportsDesc": "Reports",
+    "logoutDesc": "Logout",
+    "switchUserDesc": "Switch User",
+    "offlineModeDesc": "Toggle Offline Mode"
+  },
+  "ups": {
+    "online": "UPS Online",
+    "onBattery": "On Battery",
+    "lowBattery": "Low Battery",
+    "critical": "Critical Battery",
+    "notDetected": "UPS Not Detected",
+    "unknown": "Unknown Status",
+    "batteryLevel": "Battery Level",
+    "estimatedRuntime": "Runtime",
+    "model": "Model",
+    "voltage": "Voltage",
+    "lastUpdate": "Last Update",
+    "minutesRemaining": "min",
+    "hoursMinutesRemaining": "h m"
   },
   "network": {
     "networkSetup": "Network Setup",
